--- a/docs/assets/stylesheets/custom.css
+++ b/docs/assets/stylesheets/custom.css
@@ -428,6 +428,15 @@
   height: auto;
 }
 
+.poster-image-shadow {
+    max-width: 780px;
+    width: 100%;
+    height: auto;
+    box-shadow: -5px 5px 25px rgba(0, 0, 0, 0.25);
+    border-radius: 5px;
+    margin-bottom: 20px;
+}
+
 @media screen and (min-width: 76.25em) {
     .mdx-hero__image {
         transform: translateX(8rem);
