--- a/docs/assets/stylesheets/custom.css
+++ b/docs/assets/stylesheets/custom.css
@@ -353,9 +353,8 @@
 }
 
 .twitter-feed-section {
-    background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1123 1'><path d='M0,0 H1123' style='stroke: hsla(0, 0%, 100%, 1); stroke-width: 1'/></svg>") no-repeat bottom, 
-    linear-gradient(to top, var(--md-primary-fg-color) 30%, #ffffff 100%, var(--md-default-bg-color) 100%);
-    padding: var(--shared-padding);
+    background: var(--md-primary-fg-color);
+    padding: 0rem 4rem 2rem 4rem;
     text-align: center;
     overflow-x: hidden;
     display: none;
@@ -370,7 +369,8 @@
     font-size: 2rem;
     line-height: 1.6;
     margin-bottom: 1rem;
-    color: inherit;
+    /* color: inherit; */
+    color: var(--description-font-light);
 }
 
 .twitter-feed-section .twitter-posts {
