--- a/docs/assets/stylesheets/custom.css
+++ b/docs/assets/stylesheets/custom.css
@@ -353,8 +353,9 @@
 }
 
 .twitter-feed-section {
-    background: var(--md-primary-fg-color);
-    padding: 0rem 4rem 2rem 4rem;
+    background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1123 1'><path d='M0,0 H1123' style='stroke: hsla(0, 0%, 100%, 1); stroke-width: 1'/></svg>") no-repeat bottom, 
+    linear-gradient(to top, var(--md-primary-fg-color) 30%, #ffffff 100%, var(--md-default-bg-color) 100%);
+    padding: var(--shared-padding);
     text-align: center;
     overflow-x: hidden;
     display: none;
@@ -369,8 +370,7 @@
     font-size: 2rem;
     line-height: 1.6;
     margin-bottom: 1rem;
-    /* color: inherit; */
-    color: var(--description-font-light);
+    color: inherit;
 }
 
 .twitter-feed-section .twitter-posts {
@@ -952,4 +952,88 @@
     text-align: center;
     font-size: 0.8rem;
     padding-bottom: 0.3rem;
+}
+
+.scrolling-text-section {
+    background: var(--md-primary-fg-color);
+    padding: var(--shared-padding);
+    text-align: center;
+}
+
+.scrolling-text-bubble {
+    display: inline-block;
+    background-color: white;
+    border-radius: 20px;
+    padding: 1.5rem 1.5rem; /* Increased vertical padding */
+    position: relative;
+    margin: 1rem auto;
+    box-shadow: 0 8px 10px rgba(0, 0, 0, 0.25);
+    border: 1px solid #e7e7e7;
+    overflow: hidden;
+    width: 80%;
+    max-width: 600px;
+}
+
+.scrolling-text {
+    display: inline-block;
+    white-space: nowrap;
+    font-size: 1.5rem;
+    animation: scroll-text 30s linear infinite; /* Slowed down to 30s */
+    padding-left: 100%; /* Start the text off-screen */
+    box-sizing: content-box; /* Ensure padding doesn't affect the width */
+}
+
+.scrolling-text a {
+    color: inherit;
+    text-decoration: none;
+    margin: 0 1rem; /* Add some spacing between links */
+}
+
+.scrolling-text a:hover {
+    text-decoration: underline;
+}
+
+@keyframes scroll-text {
+    0% {
+        transform: translateX(0);
+    }
+    100% {
+        transform: translateX(-100%);
+    }
+}
+
+#mc_embed_signup_scroll .scrolling-text {
+    display: inline-block;
+    white-space: nowrap;
+    font-size: 1rem;
+    animation: scroll-text 30s linear infinite;
+    padding-left: 100%;
+    box-sizing: content-box;
+    margin-bottom: 1rem; /* Add some space below the scrolling text */
+}
+
+#mc_embed_signup_scroll .dialogue-bubble {
+    position: relative; /* Ensure positioning context for children */
+    overflow: hidden; /* Hide overflow to keep text within bounds */
+    padding-bottom: 2rem; /* Add padding to accommodate scrolling text */
+}
+
+#mc_embed_signup_scroll .scrolling-text {
+    position: absolute; /* Position absolutely within the bubble */
+    bottom: -0.8rem; /* Move it further down */
+    left: 100%; /* Start from the right edge */
+    white-space: nowrap;
+    font-size: 1.2rem;
+    animation: scroll-text-bubble 45s linear infinite;
+    box-sizing: content-box;
+    color: rgb(60, 60, 60); /* Change font color to dark green */
+}
+
+@keyframes scroll-text-bubble {
+    0% {
+        transform: translateX(-26.8%);
+    }
+    100% {
+        transform: translateX(-70%); /* Move across the entire width of the duplicated content */
+    }
 }
