--- a/docs/overrides/partials/footer.html
+++ b/docs/overrides/partials/footer.html
@@ -81,7 +81,7 @@
                 </div>
                 <div class="gf-field-group">
                   <input type="email" name="emailAddress" class="required email" id="google-form-email" required="" placeholder="メールアドレス *">
-                  <input type="hidden" name="entry.22394832" value="Openterface-{{ lang }}">
+                  <input type="hidden" name="entry.22394832" value="Openterface-jp">
                 </div>
                 <div class="clear">
                   <input type="submit" name="submit" id="google-form-submit" class="button" value="✉️ 最新情報を購読する！🐝">
