update twitter section h2 color

--- a/docs/assets/stylesheets/custom.css
+++ b/docs/assets/stylesheets/custom.css
@@ -369,7 +369,7 @@
     font-size: 2rem;
     line-height: 1.6;
     margin-bottom: 1rem;
-    color: inherit;
+    color: #ffffff;
 }
 
 .twitter-feed-section .twitter-posts {
